For user convenience, the module functionality can be disabled by the module-level variable. Also another variable added to control whether the documentation linker is cached and reused.

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -8,7 +8,7 @@ To install the package, run the following command:
 
 Alternatively, just copy the whole dbc directory into a directory on
 your Python path (e.g. unix: /usr/local/lib/python2.6/site-packages,
-Windows: C:\Python276Lib\site-packages).  Only copy the dbc directory
+Windows: C:\Python26\Lib\site-packages).  Only copy the dbc directory
 that's inside the distributed tarball / zip archive, not the entire
 dbc-x.x.x directory!
 
